public/stylesheets/showScene.css
html{
  padding: 0;
  margin: 0;
}
body{
  padding: 0;
  margin: 0;
  border: 0;
}


h1, h1, h3, h4 , h5 ,h6, p, a , div{
  font-family: Ubuntu, Helvetica, sans-serif;
  color:#eeee;
}
.container-fluid{
  position: fixed;
  z-index: 1;
}

.page-container{
  margin: 0;
  padding: 0;
  width: 100vw;
  background-color:rgb(47, 46, 46);
}

.menubar{
  z-index: 2;
}

.heading {
    margin-top: 0px;
    font-size: 3em;
    color:#eeee;
  }
  h6{
    color:#eeee;
  }

  a {
    
    text-decoration: none;
    color: inherit;
}

a:hover {
     text-decoration:none;
     color: inherit;    
}
  
  .div-block {
    text-align: center;
  }
  
 
  

 .reviews-block{
  color: rgb(241, 207, 12); 
   z-index: 5;
   position: absolute;
   top: auto;
   right: auto;
   bottom: 0%;
   margin-left: 10px;
 }

 .reviews-block-foot{
  color: rgb(241, 207, 12); 
  margin-left: 10px;
 }
  
  .div-block-3 {
    width: 90vw;
    padding-top: 100px;
    padding-bottom: 30px;
    margin-right: auto;
    margin-left: auto;
  }
  
  .text-block {
    display: inline-block;
    text-align: center;
  }

  .actions-box {
    position: absolute;
    z-index: 10;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin-top: 5px;
    margin-left: 5px;
  }
  
  .mark-visited {
    margin-right: 5px;
  }
  
  .icons {
    height: 100%;
    -o-object-fit: cover;
    object-fit: cover;
  }
  
  .avatar {
    width: 35px;
    
  }

  .save-scene {
    width: 30px;
    height: 30px;
    margin-right: 5px;
  }
  
  .likes {
    width: 30px;
    height: 30px;
    margin-right: 5px;
  }
  
  .category-tag-waterfall {
    z-index: 1;
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #1361a5;
  }
  
  .category-tag-waterfall:hover {
    background-color: #074377;
  }  

  .category-tag-mountain {
    z-index: 1;
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #e94a4a;
  }
  
  .category-tag-mountain:hover {
    background-color: #b42121;
  }
  
  .category-tag-lake {
    z-index: 1;
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #0799af;
  }
  
  .category-tag-lake:hover {
    background-color: #056b7a;
  }
  
  .category-tag-beach {
    z-index: 1;
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #928017;
  }
  
  .category-tag-forest {
    z-index: 1;
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #0f9423;
  }
  
  .category-tag-island {
    z-index: 1;
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #8829c4;
  }
  
  .city {
    z-index: 1;
    margin: 5px 5px 5px 0px;
    background-color: #e00ea8;
    text-decoration: none;
    text-transform: none;
  }
  
  .city:hover {
    background-color: #b30f87;
  }
  
  .category-tag-city {
    z-index: 1;
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding: 3px 5px;
    background-color: #e00ea8;
  }
  
  .category-tag-city:hover {
    background-color: #a30c7b;
  }




  .action-buttons{
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    background: none;
    border: none;
    color: white;
    text-shadow: 1px 2px black;
  }

  .settings-btn{
    margin-top: 5px;
  }
  .item{
    color: white;
  }

  .mobile-setting-items{
    background-color:rgb(71, 71, 71);
  }
  

 
  .item:hover{
    color: rgb(71, 71, 71);
    text-shadow: 0px 0px rgba(0, 0, 0, 0);
  }

  .heading-4 {
    margin: 0px 5px;
    color: #fff;
    font-size: 1em;
    line-height: 20px;
  }
  
  

  .scene-description{
    margin-left: auto;
    text-indent: 2em;
  }
  
  .heading-5 {
    display: inline-block;
    margin: 0px 3px 0px auto;
  }
  
  
  
  .div-block-6 {
    margin-top: 30px;
    display: flex;
    
    -webkit-box-pack: center;
    
        -ms-flex-pack: center;
    
            justify-content: center;
  }



  .div-block-2 {
    position: relative;
    overflow: hidden;
    width: 50%;
    height: auto;
    max-height: 60vh;
  }

  
  .map-text-conteiner{
    margin-top: 30px;
    width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
  .created-cont{
    text-align: end;
    margin-right: 5px;
  }

  .div-block-5 {
    text-align: right;
    color:#eeee;
    width: 100%;
    height: 70vh;
    margin-left: auto;
  }

  .div-block-4 {
    width: 50%;
  }

  #pano{
    width: 100%;
    height: 100%;
  }

  .image {
    width: auto;
    height: 100%;
    -webkit-transition: -webkit-transform 7000ms ease-in;
    transition: -webkit-transform 7000ms ease-in;
    -o-transition: transform 7000ms ease-in;
    transition: transform 7000ms ease-in;
    transition: transform 7000ms ease-in, -webkit-transform 7000ms ease-in;
    -webkit-transform-origin: bottom;
        -ms-transform-origin: bottom;
            transform-origin: bottom;
    z-index: -1;
  }

  .div-block-2:hover .image{
    z-index: -1;
    -webkit-transform-origin: bottom;
        -ms-transform-origin: bottom;
            transform-origin: bottom;
    -webkit-transform: scale(1.2);
        -ms-transform: scale(1.2);
            transform: scale(1.2);
    
  }



  .div-block-7 {
    display: block;
    margin-bottom: 25px;
  }
  .link-tag{
    color: #0795aa;
  }
  
  .div-block-8 {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin-bottom: 10px;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    background-color: #363538;
  }

  .modal-body{
    text-align: center;
  }
/* ... */

